[package]
name = "yson"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
proptest = "1.1"
criterion = "0.8"
ryu = "1.0"
itoa = "1.0"
memchr = "2.8"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
level = 3
panic = "abort"
strip = "symbols"
incremental = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "yson_benchmark"
harness = false
