[package]
edition = "2024"
authors = ["ss123she"]
name = "yson-rs"
version = "0.1.2"
description = "A fast and compliant YSON serializer and deserializer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ss123she/yson-rs"
homepage = "https://github.com/ss123she/yson-rs"
readme = "README.md"
keywords = ["yson", "ytsaurus", "serde", "serialization", "encoding"]
categories = ["encoding", "parsing"]
exclude = ["data/*", ".github/*", "tests/data/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ryu = "1.0"
itoa = "1.0"
memchr = "2.8"

[dev-dependencies]
criterion = "0.8.2"
serde_bytes = "0.11"
proptest = "1.1"
[profile.release]
strip = "symbols"
incremental = false

opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "yson_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
